1.5/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - name: multitool-service
    port: 1180
  type: ClusterIP
