1.5/netology-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: front_nginx
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: http-front
      protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: back_multitool
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: http-back
      protocol: TCP
      port: 8080
      targetPort: 80
